fixed images not scaling beyond 1600px

--- a/views/footer.jade
+++ b/views/footer.jade
@@ -12,6 +12,8 @@ footer
         a(href="/about") About
       li
         a(href="/contact") Contact
+      li
+        a(href="/privacy-policy") Privacy Policy 
       li.pull-right.copyright
         | All rights reserved. 
         - var year = new Date().getFullYear()
