--- a/views/landing/footer.jade
+++ b/views/landing/footer.jade
@@ -4,6 +4,8 @@ footer
       li.logo
         a(href="/")
           img(src="/img/logo-white.png")
+      li
+        a(href="/privacy-policy") Privacy Policy 
       li.pull-right.copyright
         | All rights reserved. 
         - var year = new Date().getFullYear()
