--- a/views/landing/home-espresso-machine.jade
+++ b/views/landing/home-espresso-machine.jade
@@ -1,44 +1,59 @@
 #home-espresso-machine
   img(src="/img/reale.jpg")
   .container
-    h1 The Reale has the same technology as the commercial cafe units
+    h1 Get the taste of cafe espresso in your home professional machine for your home
+    Do you want to step up from your plastic entry level espresso machine?
+
+    p.
+      Simply the best? We think so. The Rocket Giotto Premium Plus V2 is the 
+      pinnacle of the prosumer class of semi-automatic espresso machines. 
+      Giotto features a polished stainless steel and simple design, plus the 
+      E-61 brew group and powerful steaming capability to make ideal espresso shots. 
+      The upgraded Giotto Premium Plus V2 includes a copper-insulated boiler for 
+      efficient heat stability, dual manometers to sense brewhead pressure and a high-quality metal tamper.
+    p.
+      For those wishing to recreate the commercial cafè experience, the Giotto 
+      Premium by Rocket Espresso, Milan is the ultimate choice for the home 
+      barista who demands seriously exceptional results and appreciates 
+      impeccable craftsmanship and reliability. The super-stylish Giotto Premium 
+      unites decades of classic Italian tradition with modern technology to 
+      produce a true espresso coffee experience at the lift of a lever.
     .row
-      .span8
+      .span6
         ul      
           li 
-            h2 Pre-infusion technology for exact cafe taste
+            h4 Pre-infusion technology for exact cafe taste
             p.
-              Pre-infusion is a brewing technology in which 
-              the coffee grounds are wet prior to the extraction of the espresso. 
-              Basically a little bit of water is introduced to the coffee puck 
-              and the coffee puck absorbs the grounds and swells up to create 
-              greater surface area. All of this happens without pressure. Then 
-              after a few seconds (anywhere from 2-5) the pump kicks on and the 
-              extraction begins. As a result of the pre-infusion, more of the 
-              water is in contact with more of the coffee…so more caramels, oils, 
-              and flavors are extracted from the coffee. Pre-infusion is not only 
-              a consistency mechanism, but it creates optimal brewing conditions.
+              Pre-infusion function applies low water pressure at the start of 
+              the extraction to gently expand grinds for an even extraction
           li
-            h2 Powerful Steam Element
+            h4 Powerful Steam Element
             p.
               Good steam capacity out of the boiler 1800 watts. Powerful element generating
               great steam if you wanna steam milk for a cappucino or latte and you get the same
               type of consistency on the steam pressure at home as you would in the cafe 
           li 
-            h2 No electonic buttons, its the real authenic
+            h4 No electonic buttons, its the real authenic
             p.
               No digital control panel so less digital issues, less electronics. 
               More old school. No problems of failure
               More tradition, More authentic. Lack of more complex electrical system.
-          li
+          //li
             h2 Simple to operate 
             p.
               No programming involved. 
           li   
-            h2 No need for plumbing
-          li 
-            h2 Slick tradional look
-          
+            h4 No need for plumbing
+          li Stylish stainless steel body panels with art decorative design
+          li Brewing operated by traditional Italian camme lever
+          li 1 stainless steel hot water spout, and 1 stainless steel steam wand
+          li Ergonomic portafilter at a natural 10 degree angle for comfortable use
+          li.
+            includes 1 singleportafilter, 1 double portafilter, blind filter 
+            and group head brush for cleaning, coffee scoop, and tamp
+
+
+
         ul(style="display: none")
           li 110 Volt
           li “Pour Over” Machine – has a water tank and does not require a direct water line
@@ -59,13 +74,7 @@
             This machine has the same group head as the tecnica and Synchro so 
             it will make a commercial coffee shop quality espresso based on 
             everything I wrote in this paragraph.
-          li Stylish stainless steel body panels with art decorative design
-          li Brewing operated by traditional Italian camme lever
-          li 1 stainless steel hot water spout, and 1 stainless steel steam wand
-          li Ergonomic portafilter at a natural 10 degree angle for comfortable use
-          li.
-            includes 1 singleportafilter, 1 double portafilter, blind filter 
-            and group head brush for cleaning, coffee scoop, and tamp
-      .span4
+      .span6
+        img(src="/product-images/Reale_thumb.jpg")
         p sales@rosito-bisani.com
         .well.contact
