--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8137,7 +8137,8 @@ form span.error {
   text-shadow: 1px 1px #fff;
 }
 #contact .page-header,
-#about .page-header {
+#about .page-header,
+#privacyPolicy .page-header {
   margin-top: 15px;
 }
 /* ==========================================================================
@@ -8584,12 +8585,12 @@ body.signup {
   padding: 7px 9px;
 }
 /* ==========================================================================
-   About 
+   Narrow Page 
    ========================================================================== */
-body.about {
+.narrowPage {
   background: #f5f5f5;
 }
-.about .content {
+.narrowPage .content {
   padding: 40px;
   margin: 0 auto;
   margin-top: -32px;
@@ -8598,11 +8599,12 @@ body.about {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
+  behavior: url(/js/libs/PIE.htc);
   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
   -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
 }
-.about p {
+.narrowPage p {
   font-size: 16px;
   line-height: 1.5;
 }
