--- a/public/css/main.less
+++ b/public/css/main.less
@@ -190,7 +190,10 @@ form {
   }
 }
 
-#contact .page-header, #about .page-header {
+// product detail uses no margin
+#contact .page-header, 
+#about .page-header, 
+#privacyPolicy .page-header {
   margin-top: 15px;
 }
 
@@ -707,33 +710,25 @@ body.login, body.signup {
 }
 
 /* ==========================================================================
-   About 
+   Narrow Page 
    ========================================================================== */
-body.about {
+.narrowPage {
   background: #f5f5f5;
+  .content {
+    //max-width: 300px;
+    padding: 40px;
+    margin: 0 auto;
+    margin-top: -32px;
+    background-color: #fff;
+    border: 1px solid #e5e5e5;
+    .border-radius-for-pie(5px);
+    .box-shadow(0 1px 2px rgba(0, 0, 0, 0.05));
+  }
+  p {
+    font-size: 16px;
+    line-height: 1.5;
+  }
 }
-.about .content {
-  //max-width: 300px;
-  padding: 40px;
-  margin: 0 auto;
-  margin-top: -32px;
-  background-color: #fff;
-  border: 1px solid #e5e5e5;
-  -webkit-border-radius: 5px;
-     -moz-border-radius: 5px;
-          border-radius: 5px;
-  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-     -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-          box-shadow: 0 1px 2px rgba(0,0,0,.05);
-}
-
-.about p {
-  //font-family: LinuxLibertine, arial;
-  //font-family: 'Libre Baskerville', serif;
-  font-size: 16px;
-  line-height: 1.5;
-}
-
 
 /* ==========================================================================
    Misc 
