--- a/public/css/main.less
+++ b/public/css/main.less
@@ -1029,7 +1029,14 @@ body.login, body.signup {
 /* Portrait tablet to landscape and desktop */
 @media (min-width: 768px) and (max-width: 979px) {
 }
- 
+
+
+@media (max-width: 1069px) {
+  .nav-pills > li > a {
+    padding-right: 9px;
+    padding-left: 9px;
+  }
+}
 /* Landscape phone to portrait tablet */
 @media (max-width: 767px) {
   body {
