added marionette working on editing manuals

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -1063,3 +1063,42 @@ body.login, body.signup {
   }
 }
 
+/* Manuals */
+
+.item-rows {  
+  margin-top: 10px;
+  h1 {
+    font-size: 54px;
+    margin: 20px 0 0 0;
+    line-height: 1.2;
+  }
+  ul {
+    overflow: auto;
+    list-style: none;
+    margin-top: 35px;
+  }
+  li {
+    float: left;
+    width: 175px;
+    margin: 0 20px;
+    margin-bottom: 15px;
+    display: inline;
+    border: 1px solid #ccc;
+    text-align: center;
+    position: relative;
+    padding-top: 5px;
+  }
+  .title {
+    font-size: 18px;
+    font-weight: bold;
+    margin: .3em;
+    display: block;
+    height: 56px;
+    overflow: hidden;
+  }
+  .actions {
+    margin: 10px 0;
+  }
+}
+
+
