--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8935,3 +8935,39 @@ body.signup {
     margin-top: 0;
   }
 }
+/* Manuals */
+.item-rows {
+  margin-top: 10px;
+}
+.item-rows h1 {
+  font-size: 54px;
+  margin: 20px 0 0 0;
+  line-height: 1.2;
+}
+.item-rows ul {
+  overflow: auto;
+  list-style: none;
+  margin-top: 35px;
+}
+.item-rows li {
+  float: left;
+  width: 175px;
+  margin: 0 20px;
+  margin-bottom: 15px;
+  display: inline;
+  border: 1px solid #ccc;
+  text-align: center;
+  position: relative;
+  padding-top: 5px;
+}
+.item-rows .title {
+  font-size: 18px;
+  font-weight: bold;
+  margin: .3em;
+  display: block;
+  height: 56px;
+  overflow: hidden;
+}
+.item-rows .actions {
+  margin: 10px 0;
+}
