--- a/public/js/apps/manuals/templates/edit_form.hbs
+++ b/public/js/apps/manuals/templates/edit_form.hbs
@@ -1,9 +1,8 @@
-<h1>Edit Name</h1>
-<form>
-  <label>Name</label>
-  <input class="span3" name="name" value="{{name}}">
+<form class="form-inline" style="margin-top: 15px">
+  <label>Name: </label>
+  <input type="text" class="span3" name="title" value="{{title}}">
 
-  <button class="btn btn-small js-submit">
+  <button class="btn js-submit" style="display: inline">
     Save
   </button>
 </form>
