--- a/public/js/fileUpload/layout.jade
+++ b/public/js/fileUpload/layout.jade
@@ -11,6 +11,6 @@ html(lang="en")
 
     script(data-main='/js/fileUpload/main', src='/js/libs/require.js')
   body
-    #notification
+    #dialog-region
     #app
       block content
