--- a/views/layout.jade
+++ b/views/layout.jade
@@ -24,7 +24,8 @@ html(lang="en")
       script(data-main='/js/main', src='/js/libs/require.js')
   body
     include nav
-    #notification
+    #alert-region
+    #dialog-region
     #app
-      block content
+      block homepage
     include footer
