--- a/public/css/main.less
+++ b/public/css/main.less
@@ -1,5 +1,6 @@
 @import "../js/libs/bootstrap/less/bootstrap.less";
 @import "../js/libs/bootstrap/less/responsive.less";
+@import "../js/libs/jquery-ui-custom-theme/jquery-ui-1.10.0.custom.css";
 @import "utility.less";
 // Fonts
 @import "fonts.less";
@@ -77,6 +78,13 @@ body {
   padding-bottom: 70px;
 }
 
+#notification-region {
+  .alert {
+    //text-align: center;
+    //position: absolute;
+  }
+}
+
 #alert {
   position: fixed;
   left: 50%;
@@ -108,6 +116,18 @@ body {
     .close {
       color: #E73E36;
     }
+  }
+}
+
+.center-dialog {
+  position: fixed;
+  left: 50%;
+  z-index: 1060;
+  text-align: center;
+  .inner {
+    position: relative;
+    left: -50%;
+    padding: 10px;
   }
 }
 
@@ -185,7 +205,8 @@ form .btn {
 // product detail uses no margin
 #contact .page-header, 
 #about .page-header, 
-#privacyPolicy .page-header {
+#privacyPolicy .page-header,
+#manuals .page-header {
   margin-top: 15px;
 }
 
@@ -834,7 +855,17 @@ body.login, body.signup {
 }
 
 
-
+#manuals {
+  .item-rows {  
+    //margin-top: 10px;
+    //.clearfix;
+    h1 {
+      font-size: 38.5px;
+      //margin: 20px 0 0 0;
+      //line-height: 1.2;
+    }
+  }
+}
 
 
 .thumbs {
@@ -1063,42 +1094,50 @@ body.login, body.signup {
   }
 }
 
-/* Manuals */
-
-.item-rows {  
-  margin-top: 10px;
-  h1 {
-    font-size: 54px;
+#manuals {
+  h2 {
+    font-size: 30px;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 10px;
     margin: 20px 0 0 0;
     line-height: 1.2;
   }
-  ul {
+  h3 {
+    color:#666;
+    font-size: 24px;
+    margin-bottom: 25px;
+    margin-top: 15px;
+    line-height: 1.2;
+  }
+  .item-rows {  
+    margin-top: 10px;
     overflow: auto;
     list-style: none;
     margin-top: 35px;
-  }
-  li {
-    float: left;
-    width: 175px;
-    margin: 0 20px;
-    margin-bottom: 15px;
-    display: inline;
-    border: 1px solid #ccc;
-    text-align: center;
-    position: relative;
-    padding-top: 5px;
-  }
-  .title {
-    font-size: 18px;
-    font-weight: bold;
-    margin: .3em;
-    display: block;
-    height: 56px;
-    overflow: hidden;
-  }
-  .actions {
-    margin: 10px 0;
+    .clearfix;
+    li {
+      float: left;
+      width: 175px;
+      margin: 0 20px;
+      margin-bottom: 15px;
+      display: inline;
+      border: 1px solid #ccc;
+      text-align: center;
+      position: relative;
+      padding-top: 5px;
+    }
+    h4 {
+      font-size: 18px;
+      font-weight: bold;
+      margin: .3em;
+      display: block;
+      height: 56px;
+      overflow: hidden;
+      line-height: 1.1;
+    }
+    .actions {
+      margin: 10px 0;
+    }
   }
 }
-
 
