added manuals link to header

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -267,7 +267,7 @@ form .btn {
 
 .navbar .nav li a {
   padding: 28px 20px 24px;
-  font-size: 18px;
+  font-size: 14px;
   color: #fff;
   text-shadow: none;
 }
@@ -275,7 +275,7 @@ form .btn {
   list-style: none;
   color: #fff;
   //background: url(/img/telephone-icon.png) no-repeat center left; 
-  padding-left: 32px;
+  //padding-left: 32px;
   margin-top: 14px;
 }
 
