--- a/views/footer.jade
+++ b/views/footer.jade
@@ -11,6 +11,8 @@ footer
       li
         a(href="/about") About
       li
+        a(href="/manuals") Manuals
+      li
         a(href="/contact") Contact
       li
         a(href="/privacy-policy") Privacy Policy 
