--- a/views/nav.jade
+++ b/views/nav.jade
@@ -12,6 +12,7 @@
           li: a(href="/") Home 
           li: a(href="/products") Products 
           li: a(href="/about") About 
+          li: a(href="/manuals") Manuals 
           li: a(href="/contact") Contact 
       .user-menu.pull-right
       ul.pull-right.contact-numbers  
