--- a/public/css/main.less
+++ b/public/css/main.less
@@ -1125,6 +1125,12 @@ body.login, body.signup {
       text-align: center;
       position: relative;
       padding-top: 5px;
+      .thumbnail-wrapper {
+        height: 155px; 
+        width: 175px;
+        text-align: center;
+        display: block;
+      }
     }
     h4 {
       font-size: 18px;
