--- a/public/js/apps/manuals/templates/list_item.hbs
+++ b/public/js/apps/manuals/templates/list_item.hbs
@@ -1,2 +1,4 @@
-<img alt="{{title}}" src="/img/manuals/{{thumb}}"/>
+<div class="thumbnail-wrapper">
+  <img alt="{{title}}" src="/img/manuals/{{thumb}}"/>
+</div>
 <h4>{{title}}</h4>
