--- a/public/js/apps/manuals/templates/list_item.hbs
+++ b/public/js/apps/manuals/templates/list_item.hbs
@@ -1,4 +1,6 @@
-<div class="thumbnail-wrapper">
-  <img alt="{{title}}" src="/img/manuals/{{thumb}}"/>
-</div>
-<h4>{{title}}</h4>
+<a href="/img/manuals/{{fileName}}">
+  <div class="thumbnail-wrapper">
+    <img alt="{{title}}" src="/img/manuals/{{thumb}}"/>
+  </div>
+  <h4>{{title}}</h4>
+</a>
