--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8998,10 +8998,16 @@ body.signup {
   margin: 0 20px;
   margin-bottom: 15px;
   display: inline;
-  border: 1px solid #ccc;
   text-align: center;
   position: relative;
+}
+#manuals .item-rows li a {
   padding-top: 5px;
+  border: 1px solid #ccc;
+  display: block;
+}
+#manuals .item-rows li a:hover {
+  border: 1px solid #5FBDFF;
 }
 #manuals .item-rows li .thumbnail-wrapper {
   height: 155px;
